syntax = "proto3";
option go_package = "net";

// 端口映射
message proxy_mapping {
    int32  local_port  = 1;
    int32  remote_port = 2;
    string description = 3;
}

// 注册
message proxy_register_req{
    repeated proxy_mapping maps = 1;
}

message proxy_register_resp{
    string msg = 1;
}

// 取消
message proxy_unregister_req{
    repeated int32 remote_port = 1;
}

message proxy_unregister_resp{
    string msg = 1;
}

// 映射列表
message proxy_list_req{}

message proxy_list_resp{
    repeated proxy_mapping maps = 1;
}

// 穿透消息
message proxy_message_req {
    uint32 connID = 1;
    bytes  data   = 2;
}

message proxy_message_resp{
    string msg = 1;
}